[workspace]
resolver = "2"
members = [
  "examples",
  "foyer",
  "foyer-bench",
  "foyer-common",
  "foyer-memory",
  "foyer-storage",
  "foyer-tokio",
  "xtask",
]

[workspace.package]
version = "0.23.0-dev"
edition = "2024"
rust-version = "1.86.0"
repository = "https://github.com/foyer-rs/foyer"
homepage = "https://foyer-rs.github.io/foyer"
keywords = ["cache", "hybrid"]
authors = ["MrCroxx <mrcroxx@outlook.com>"]
license = "Apache-2.0"
readme = "README.md"
exclude = ["website/*"]

[workspace.dependencies]
allocator-api2 = "0.2"
anyhow = "1"
bincode = "1"
bitflags = "2"
bytes = "1"
bytesize = { package = "foyer-bytesize", version = "2" }
cfg-if = "1"
clap = { version = "4", features = ["derive"] }
cmsketch = "0.2"
colored = "3"
console-subscriber = "0.5"
core_affinity = "0.8"
criterion = "0.8.2"
csv = "1"
equivalent = "1"
fastant = "0.1.11"
fastrace = "0.7"
fastrace-jaeger = "0.7"
fastrace-opentelemetry = "0.15"
foyer = { version = "0.23.0-dev", path = "foyer", default-features = false }
foyer-common = { version = "0.23.0-dev", path = "foyer-common", default-features = false }
foyer-memory = { version = "0.23.0-dev", path = "foyer-memory", default-features = false }
foyer-storage = { version = "0.23.0-dev", path = "foyer-storage", default-features = false }
fs4 = { version = "0.13", default-features = false }
futures-core = { version = "0.3" }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
hashbrown = "0.16"
hdrhistogram = "7"
http-body-util = "0.1"
humantime = "2"
hyper = { version = "1", default-features = false }
hyper-util = { version = "0.1", default-features = false }
intrusive-collections = { package = "foyer-intrusive-collections", version = "0.10.0-dev" }
io-uring = "0.7"
itertools = "0.14"
jiff = { version = "0.2.16" }
libc = "0.2"
lz4 = "1"
mea = "0.6"
mixtrics = "0.2"
moka = "0.12"
opentelemetry = "0.31"
opentelemetry-otlp = "0.31"
opentelemetry_sdk = "0.31"
parking_lot = { version = "0.12" }
paste = "1"
pin-project = "1"
prometheus = "0.14"
rand = { version = "0.10.0", default-features = false }
rand_distr = { version = "0.6.0" }
# Enable all features by default to make it possible to opt-out madsim dependency. 
# See why we need this at https://github.com/rust-lang/cargo/issues/10801
runtime-madsim-tokio = { package = "madsim-tokio", version = "0.2", features = [
  "full",
] }
runtime-tokio = { package = "tokio", version = "1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
tempfile = "3"
test-log = "0.2"
tikv-jemallocator = "0.6"
tokio = { package = "foyer-tokio", version = "0.23.0-dev", path = "foyer-tokio", default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
twox-hash = { version = "2.1.2", default-features = false }
zstd = "0.13"

[workspace.lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[workspace.lints.clippy]
allow_attributes = "warn"

[profile.release]
debug = "full"
