[package]
name = "examples"
description = "examples for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
publish = false

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
equivalent = { workspace = true }
fastrace = { workspace = true }
fastrace-jaeger = { version = "0.7", optional = true }
fastrace-opentelemetry = { version = "0.7", optional = true }
foyer = { workspace = true }
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = [
  "server",
  "http1",
] }
hyper-util = { version = "0.1", default-features = false, features = ["tokio"] }
mixtrics = { workspace = true, features = ["prometheus"] }
opentelemetry = { version = "0.26", optional = true }
opentelemetry-otlp = { version = "0.26", optional = true }
opentelemetry-semantic-conventions = { version = "0.26", optional = true }
opentelemetry_sdk = { version = "0.26", features = [
  "rt-tokio",
  "trace",
], optional = true }
prometheus = { workspace = true }
serde = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["rt"] }
tracing = { workspace = true }

[features]
serde = ["foyer/serde"]
jaeger = ["fastrace-jaeger"]
ot = [
  "fastrace-opentelemetry",
  "opentelemetry",
  "opentelemetry-otlp",
  "opentelemetry-semantic-conventions",
  "opentelemetry_sdk",
]

[[example]]
name = "memory"
path = "memory.rs"

[[example]]
name = "hybrid"
path = "hybrid.rs"

[[example]]
name = "hybrid_full"
path = "hybrid_full.rs"

[[example]]
name = "event_listener"
path = "event_listener.rs"

[[example]]
name = "tail_based_tracing"
path = "tail_based_tracing.rs"

[[example]]
name = "equivalent"
path = "equivalent.rs"

[[example]]
name = "export_metrics_prometheus_hyper"
path = "export_metrics_prometheus_hyper.rs"

[[example]]
name = "serde"
path = "serde.rs"
