[package]
name = "examples"
description = "examples for foyer - Hybrid cache for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
exclude.workspace = true
publish = false

[features]
serde = ["foyer/serde"]
jaeger = ["fastrace-jaeger"]
ot = [
  "fastrace-opentelemetry",
  "opentelemetry",
  "opentelemetry-otlp",
  "opentelemetry_sdk",
]

[dependencies]
anyhow = { workspace = true }
equivalent = { workspace = true }
fastrace = { workspace = true }
fastrace-jaeger = { workspace = true, optional = true }
fastrace-opentelemetry = { workspace = true, optional = true }
foyer = { workspace = true, features = ["runtime-tokio"] }
http-body-util = { workspace = true }
hyper = { workspace = true, default-features = false, features = [
  "server",
  "http1",
] }
hyper-util = { workspace = true, default-features = false, features = [
  "tokio",
] }
jiff = { workspace = true }
mixtrics = { workspace = true, features = ["prometheus"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, features = [
  "grpc-tonic",
], optional = true }
opentelemetry_sdk = { workspace = true, features = [
  "rt-tokio",
  "trace",
], optional = true }
prometheus = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[[example]]
name = "memory"
path = "memory.rs"

[[example]]
name = "hybrid"
path = "hybrid.rs"

[[example]]
name = "hybrid_full"
path = "hybrid_full.rs"

[[example]]
name = "event_listener"
path = "event_listener.rs"

[[example]]
name = "tail_based_tracing"
path = "tail_based_tracing.rs"

[[example]]
name = "equivalent"
path = "equivalent.rs"

[[example]]
name = "export_metrics_prometheus_hyper"
path = "export_metrics_prometheus_hyper.rs"

[[example]]
name = "serde"
path = "serde.rs"
