[package]
name = "examples"
description = "examples for foyer - Hybrid cache for Rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
exclude.workspace = true
publish = false

[features]
serde = ["foyer/serde"]
otel = [
  "fastrace-opentelemetry",
  "opentelemetry",
  "opentelemetry-otlp",
  "opentelemetry_sdk",
  "tonic",
]

[dependencies]
anyhow = { workspace = true }
equivalent = { workspace = true }
fastrace = { workspace = true }
fastrace-opentelemetry = { workspace = true, optional = true }
foyer = { workspace = true, features = ["runtime-tokio"] }
http-body-util = { workspace = true }
hyper = { workspace = true, default-features = false, features = [
  "server",
  "http1",
] }
hyper-util = { workspace = true, default-features = false, features = [
  "tokio",
] }
jiff = { workspace = true }
mixtrics = { workspace = true, features = ["prometheus"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, features = [
  "grpc-tonic",
], optional = true }
opentelemetry_sdk = { workspace = true, features = [
  "rt-tokio",
  "trace",
], optional = true }
prometheus = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true, optional = true }
tracing = { workspace = true }

# `tonic` is not used directly in example code, but it must be listed as a dep so the `otel` feature
# can opt into the tonic-backed gRPC transport for `opentelemetry-otlp` (`grpc-tonic`).
# Tell cargo-machete to ignore it so CI doesn't flag it as unused.
[package.metadata.cargo-machete]
ignored = ["tonic"]

[[example]]
name = "memory"
path = "memory.rs"

[[example]]
name = "hybrid"
path = "hybrid.rs"

[[example]]
name = "hybrid_full"
path = "hybrid_full.rs"

[[example]]
name = "event_listener"
path = "event_listener.rs"

[[example]]
name = "tail_based_tracing"
path = "tail_based_tracing.rs"

[[example]]
name = "equivalent"
path = "equivalent.rs"

[[example]]
name = "export_metrics_prometheus_hyper"
path = "export_metrics_prometheus_hyper.rs"

[[example]]
name = "serde"
path = "serde.rs"
