[package]
name = "foyer-bench"
description = "bench tool for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[features]
default = ["jemalloc"]
deadlock = ["parking_lot/deadlock_detection", "foyer/deadlock"]
tokio-console = ["dep:console-subscriber"]
strict_assertions = ["foyer/strict_assertions"]
jemalloc = ["dep:tikv-jemallocator"]
jeprof = ["jemalloc", "tikv-jemallocator?/profiling"]
tracing = ["foyer/tracing", "dep:fastrace-jaeger", "dep:fastrace"]

[dependencies]
anyhow = { workspace = true }
bytesize = { workspace = true }
clap = { workspace = true }
console-subscriber = { workspace = true, optional = true }
fastrace = { workspace = true, optional = true }
fastrace-jaeger = { workspace = true, optional = true }
foyer = { workspace = true, features = ["tracing", "clap"] }
futures-util = { workspace = true }
hdrhistogram = { workspace = true }
http-body-util = { workspace = true }
humantime = { workspace = true }
hyper = { workspace = true, features = ["server", "http1"] }
hyper-util = { workspace = true, features = ["tokio"] }
itertools = { workspace = true }
mixtrics = { workspace = true, features = ["prometheus"] }
parking_lot = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[target.'cfg(madsim)'.dependencies]
tokio = { package = "madsim-tokio", version = "0.2", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
  "signal",
  "fs",
  "net",
] }

[target.'cfg(not(madsim))'.dependencies]
tokio = { workspace = true, features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
  "signal",
  "fs",
  "net",
] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }

[lints]
workspace = true
