[package]
name = "foyer-cli"
version = "0.0.0"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "Hybrid cache for Rust"
license = "Apache-2.0"
repository = "https://github.com/foyer-rs/foyer"
homepage = "https://github.com/foyer-rs/foyer"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytesize = "1"
clap = { workspace = true }
thiserror = "1"

[dev-dependencies]

[[bin]]
name = "foyer"
path = "src/main.rs"
