[package]
name = "foyer-cli"
description = "cli tool for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytesize = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]

[[bin]]
name = "foyer"
path = "src/main.rs"

[lints]
workspace = true
