[package]
name = "foyer-common"
description = "common components for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude.workspace = true

[package.metadata.cargo-udeps.ignore]
# Only used in benches and with `serde` feature enabled.
development = ["criterion", "serde_bytes"]

[features]
default = ["runtime-tokio"]
serde = ["dep:serde", "dep:bincode"]
strict_assertions = []
tracing = ["dep:fastrace"]
# Use `tokio` as the async runtime.
runtime-tokio = ["dep:tokio"]
# Use `madsim-tokio` as the async runtime.
runtime-madsim-tokio = ["dep:madsim-tokio"]

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true, optional = true }
bytes = { workspace = true }
cfg-if = { workspace = true }
fastrace = { workspace = true, optional = true }
futures-core ={ workspace = true }
itertools = { workspace = true }
mixtrics = { workspace = true }
parking_lot = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true, optional = true }
twox-hash = { workspace = true }
tokio = { workspace = true, optional = true }
madsim-tokio = { workspace = true, optional = true }

[dev-dependencies]
bytes = { workspace = true, features = ["serde"] }
criterion = { workspace = true }
mixtrics = { workspace = true, features = ["test-utils"] }
paste = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "bench_serde"
harness = false
