[package]
name = "foyer-experimental"
version = "0.1.0"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "experimental components for foyer - the hybrid cache for Rust"
license = "Apache-2.0"
repository = "https://github.com/mrcroxx/foyer"
homepage = "https://github.com/mrcroxx/foyer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-udeps.ignore]
normal = ["foyer-workspace-hack"]

[dependencies]
anyhow = "1.0"
bytes = "1"
crossbeam = { version = "0.8", features = ["std", "crossbeam-channel"] }
foyer-workspace-hack = { version = "0.2", path = "../foyer-workspace-hack" }
itertools = "0.12"
parking_lot = { version = "0.12", features = ["arc_lock"] }
paste = "1.0"
prometheus = "0.13"
thiserror = "1"
tokio = { workspace = true }
tracing = "0.1"

[dev-dependencies]
bytesize = "1"
clap = { version = "4", features = ["derive"] }
foyer-common = { version = "0.3", path = "../foyer-common" }
hdrhistogram = "7"
rand = "0.8.5"
rand_mt = "4.2.1"
tempfile = "3"

[features]
deadlock = ["parking_lot/deadlock_detection"]
