[package]
name = "foyer-experimental"
version = "0.0.0"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "experimental components for foyer - the hybrid cache for Rust"
license = "Apache-2.0"
repository = "https://github.com/mrcroxx/foyer"
homepage = "https://github.com/mrcroxx/foyer"
readme = "../README.md"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
crossbeam = { version = "0.8", features = ["std", "crossbeam-channel"] }
foyer-common = { version = "0.6", path = "../foyer-common" }
lazy_static = "1"
parking_lot = { version = "0.12", features = ["arc_lock"] }
paste = "1.0"
prometheus = "0.13"
rustversion = "1.0"
thiserror = "1"
tokio = { workspace = true }
tracing = "0.1"

[dev-dependencies]
itertools = "0.12"

[features]
deadlock = ["parking_lot/deadlock_detection"]
