[package]
name = "foyer-intrusive"
version = "0.5.3"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "intrusive data structures for foyer - the hybrid cache for Rust"
license = "Apache-2.0"
repository = "https://github.com/mrcroxx/foyer"
homepage = "https://github.com/mrcroxx/foyer"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
memoffset = "0.9"
