[package]
name = "foyer-intrusive"
version = "0.9.1"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "intrusive data structures for foyer - the hybrid cache for Rust"
license = "Apache-2.0"
repository = "https://github.com/foyer-rs/foyer"
homepage = "https://github.com/foyer-rs/foyer"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foyer-common = { version = "0.9.1", path = "../foyer-common" }
itertools = { workspace = true }

[features]
strict_assertions = ["foyer-common/strict_assertions"]
