[package]
name = "foyer-intrusive"
description = "intrusive data structures for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foyer-common = { workspace = true }
itertools = { workspace = true }

[features]
strict_assertions = ["foyer-common/strict_assertions"]
