[package]
name = "foyer-memory"
description = "memory cache for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }

[dependencies]
ahash = { workspace = true }
arc-swap = "1"
bitflags = "2"
cmsketch = "0.2.1"
equivalent = { workspace = true }
fastrace = { workspace = true, optional = true }
foyer-common = { workspace = true }
hashbrown = { workspace = true }
intrusive-collections = { package = "foyer-intrusive-collections", version = "0.10.0-dev" }
itertools = { workspace = true }
mixtrics = { workspace = true }
parking_lot = { workspace = true }
pin-project = "1"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
csv = "1.3.0"
futures-util = { workspace = true }
moka = { version = "0.12", features = ["sync"] }
rand = { workspace = true, features = ["small_rng"] }
rand_distr = { workspace = true }
test-log = { workspace = true }

[target.'cfg(madsim)'.dependencies]
tokio = { package = "madsim-tokio", version = "0.2", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
  "signal",
  "fs",
] }

[target.'cfg(not(madsim))'.dependencies]
tokio = { package = "tokio", version = "1", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
  "signal",
  "fs",
] }

[features]
nightly = ["hashbrown/nightly"]
test_utils = []
deadlock = ["parking_lot/deadlock_detection"]
strict_assertions = ["foyer-common/strict_assertions"]
tracing = ["fastrace/enable", "foyer-common/tracing"]

[[bench]]
name = "bench_hit_ratio"
harness = false

[[bench]]
name = "bench_dynamic_dispatch"
harness = false

[lints]
workspace = true
