[package]
name = "foyer-memory"
description = "memory cache for foyer - Hybrid cache for Rust"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
exclude.workspace = true

[features]
default = ["tokio/runtime-tokio"]
nightly = ["hashbrown/nightly"]
test_utils = []
deadlock = ["parking_lot/deadlock_detection"]
strict_assertions = ["foyer-common/strict_assertions"]
tracing = ["dep:fastrace", "foyer-common/tracing"]

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
cmsketch = { workspace = true }
equivalent = { workspace = true }
fastrace = { workspace = true, optional = true }
foyer-common = { workspace = true }
futures-util = { workspace = true }
hashbrown = { workspace = true }
intrusive-collections = { workspace = true }
itertools = { workspace = true }
mea = { workspace = true }
mixtrics = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
pin-project = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
csv = { workspace = true }
futures-util = { workspace = true }
moka = { workspace = true, features = ["sync"] }
rand = { workspace = true, features = ["small_rng"] }
rand_distr = { workspace = true }
test-log = { workspace = true, features = ["trace", "color"] }

[[bench]]
name = "bench_hit_ratio"
harness = false

[[bench]]
name = "bench_dynamic_dispatch"
harness = false

[lints]
workspace = true
