[package]
name = "foyer-storage-bench"
version = "0.1.0"
edition = "2021"
authors = ["MrCroxx <mrcroxx@outlook.com>"]
description = "Hybrid cache for Rust"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytesize = "1"
clap = { version = "4", features = ["derive"] }
console-subscriber = { version = "0.1", optional = true }
foyer-intrusive = { path = "../foyer-intrusive" }
foyer-storage = { path = "../foyer-storage" }
foyer-workspace-hack = { version = "0.1", path = "../foyer-workspace-hack" }
futures = "0.3"
hdrhistogram = "7"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
itertools = "0.11.0"
libc = "0.2"
nix = { version = "0.27", features = ["fs", "mman"] }
opentelemetry = { version = "0.20", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.13.0", optional = true }
opentelemetry-semantic-conventions = { version = "0.12", optional = true }
parking_lot = "0.12"
prometheus = "0.13"
rand = "0.8.5"
rand_mt = "4.2.1"
tempfile = "3"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "signal",
] }
tracing = "0.1"
tracing-opentelemetry = { version = "0.21", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
deadlock = ["parking_lot/deadlock_detection", "foyer-storage/deadlock"]
tokio-console = ["console-subscriber"]
trace = [
    "opentelemetry",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "opentelemetry-semantic-conventions",
]
